k8s/frontend-operator-app/strip-prefix-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: operator-strip-prefix
  namespace: operator-app
spec:
  stripPrefix:
    prefixes:
      - /operator
