k8s/frontend-operator-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operator-app
  namespace: operator-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: operator-app
  template:
    metadata:
      labels:
        app: operator-app
    spec:
      tolerations:
        - key: nodetype
          operator: Equal
          value: operator
          effect: NoSchedule
      nodeSelector:
        role: operator-worker
      containers:
        - name: operator-app
          image: kimsewon/operator-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
